--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^8.3",
+        "php": "^7.2 || ^8.0 || ^8.1 || ^8.2 || ^8.3",
         "ext-mbstring": "*"
     },
     "require-dev": {
@@ -30,5 +30,8 @@
     "scripts": {
         "coverage": "composer test -- --coverage-html ./coverage-report",
         "test": "phpunit -c ./phpunit.xml"
-    }
+    },
+    "repositories": [
+       { "type": "vcs", "url": "https://github.com/mcakici/turkish-stemmer-php" }
+    ]
 }
